fix bug in optical sensor example, change optical scan-type class name

--- a/src/tatc-instrupy-optical-sensor-example.ipynb
+++ b/src/tatc-instrupy-optical-sensor-example.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "from instrupy.passive_optical_scanner_model import PassiveOpticalScannerModel as InstruPy_PassiveOpticalScannerModel\n",
     "\n",
-    "from eose.instruments import RectangularGeometry, ScanTechnique, PassiveOpticalScanner\n",
+    "from eose.instruments import RectangularGeometry, OpticalInstrumentScanTechnique, PassiveOpticalScanner\n",
     "from eose.datametrics import (\n",
     "    DataMetricsRequest,\n",
     "    BasicSensorDataMetricsInstantaneous,\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
     "    power= 32, \n",
     "    field_of_view= RectangularGeometry(angle_height= 0.628, angle_width= 115.8),\n",
     "    scene_field_of_view= RectangularGeometry(angle_height= 30, angle_width= 115.8),\n",
-    "    scanTechnique= ScanTechnique.WHISKBROOM,\n",
+    "    scanTechnique= OpticalInstrumentScanTechnique.WHISKBROOM,\n",
     "    data_rate= 85,\n",
     "    number_detector_rows= 256,\n",
     "    number_detector_cols= 1,\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -230,6 +230,18 @@
    "outputs": [],
    "source": [
     "def access_tatc(request: AccessRequest) -> AccessResponse:\n",
+    "    def get_field_of_regard(payload):\n",
+    "        if payload.scene_field_of_view is not None:\n",
+    "            field_of_regard = payload.scene_field_of_view\n",
+    "        else:\n",
+    "            field_of_regard = payload.field_of_view\n",
+    "        if field_of_regard.type == \"CircularGeometry\":\n",
+    "            return(field_of_regard.diameter)\n",
+    "        elif field_of_regard.type == \"RectangularGeometry\":\n",
+    "            return(field_of_regard.angle_height)\n",
+    "        else:\n",
+    "            raise RuntimeError('Unknown geometry type: {field_of_regard.type}')\n",
+    "            \n",
     "    if request.propagator != Propagator.SGP4:\n",
     "        raise RuntimeError(\"TAT-C only supports SGP4 propagator.\")\n",
     "    satellites = [\n",
@@ -238,8 +250,8 @@
     "            orbit=TwoLineElements(tle=satellite.orbit.to_tle()),\n",
     "            instruments=[\n",
     "                TATC_Instrument(\n",
-    "                    name=str(payload.id), field_of_regard=payload.scene_field_of_view.angle_width\n",
-    "                )  # assumed that the instrument has a circular FOV with diameter = angle_width\n",
+    "                    name=str(payload.id), field_of_regard= get_field_of_regard(payload)\n",
+    "                )\n",
     "            ],\n",
     "        )\n",
     "        for satellite in request.satellites\n",
@@ -313,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -329,19 +341,11 @@
     "    :paramtype time_instant: AwareDatetime\n",
     "    :param data_metrics: A dictionary containing data metrics such as incidence angle, look angle, etc.\n",
     "    :paramtype data_metrics: dict\n",
-    "    :return: An instance of `BasicSensorDataMetricsInstantaneous` with the provided metrics.\n",
-    "    :rtype: BasicSensorDataMetricsInstantaneous\n",
+    "    :return: An instance of `PassiveOpticalScannerDataMetricsInstantaneous` with the provided metrics.\n",
+    "    :rtype: PassiveOpticalScannerDataMetricsInstantaneous\n",
     "    :raises ValueError: If the sensor type is not supported.\n",
     "    \"\"\"\n",
-    "    if instru_type == \"BasicSensor\":\n",
-    "        return BasicSensorDataMetricsInstantaneous(\n",
-    "            time=time_instant,\n",
-    "            incidence_angle=data_metrics[\"incidence angle [deg]\"],\n",
-    "            look_angle=data_metrics[\"look angle [deg]\"],\n",
-    "            observation_range=data_metrics[\"observation range [km]\"],\n",
-    "            solar_zenith=data_metrics[\"solar zenith [deg]\"],\n",
-    "        )\n",
-    "    elif instru_type == \"PassiveOpticalScanner\":\n",
+    "    if instru_type == \"PassiveOpticalScanner\":\n",
     "        return PassiveOpticalScannerDataMetricsInstantaneous(\n",
     "            time=time_instant,\n",
     "            noise_equivalent_delta_T=data_metrics[\"noise-equivalent delta T [K]\"],\n",
@@ -352,7 +356,7 @@
     "        )\n",
     "    else:\n",
     "        raise ValueError(\n",
-    "            f\"{instru_type} instrument type is not supported. Only 'BasicSensor' instrument type is supported.\"\n",
+    "            f\"{instru_type} instrument type is not supported by this script. Only 'PassiveOpticalScanner' instrument type is supported.\"\n",
     "        )\n",
     "\n",
     "\n",
@@ -407,6 +411,7 @@
     "                    if instru.id == instrument_id:\n",
     "                        instru_type = instru.type\n",
     "                        if instru_type == \"PassiveOpticalScanner\":\n",
+    "                            instrupy_fov_geom = None\n",
     "                            if instru.field_of_view.type == \"CircularGeometry\":\n",
     "                                instrupy_fov_geom = {\n",
     "                                    \"shape\": \"CIRCULAR\",\n",
@@ -423,21 +428,23 @@
     "                                    f\"Only Circular and Rectangular geometries are supported and not {instru.field_of_view.type}\"\n",
     "                                )\n",
     "                            \n",
-    "                            if instru.scene_field_of_view.type == \"CircularGeometry\":\n",
-    "                                instrupy_scene_fov_geom = {\n",
-    "                                    \"shape\": \"CIRCULAR\",\n",
-    "                                    \"diameter\": instru.scene_field_of_view.diameter,\n",
-    "                                }\n",
-    "                            elif instru.scene_field_of_view.type == \"RectangularGeometry\":\n",
-    "                                instrupy_scene_fov_geom = {\n",
-    "                                    \"shape\": \"RECTANGULAR\",\n",
-    "                                    \"angleHeight\": instru.scene_field_of_view.angle_height,\n",
-    "                                    \"angleWidth\": instru.scene_field_of_view.angle_width,\n",
-    "                                }\n",
-    "                            else:\n",
-    "                                raise ValueError(\n",
-    "                                    f\"Only Circular and Rectangular geometries are supported and not {instru.instrupy_scene_fov_geom.type}\"\n",
-    "                                )\n",
+    "                            instrupy_scene_fov_geom = None\n",
+    "                            if instru.scene_field_of_view: \n",
+    "                                if instru.scene_field_of_view.type == \"CircularGeometry\":\n",
+    "                                    instrupy_scene_fov_geom = {\n",
+    "                                        \"shape\": \"CIRCULAR\",\n",
+    "                                        \"diameter\": instru.scene_field_of_view.diameter,\n",
+    "                                    }\n",
+    "                                elif instru.scene_field_of_view.type == \"RectangularGeometry\":\n",
+    "                                    instrupy_scene_fov_geom = {\n",
+    "                                        \"shape\": \"RECTANGULAR\",\n",
+    "                                        \"angleHeight\": instru.scene_field_of_view.angle_height,\n",
+    "                                        \"angleWidth\": instru.scene_field_of_view.angle_width,\n",
+    "                                    }\n",
+    "                                else:\n",
+    "                                    raise ValueError(\n",
+    "                                        f\"Only Circular and Rectangular geometries are supported and not {instru.instrupy_scene_fov_geom.type}\"\n",
+    "                                    )\n",
     "\n",
     "                            # Convert orientation in Quaternion to Euler rotations\n",
     "                            r = Scipy_Rotation.from_quat(list(instru.orientation))\n",
@@ -450,8 +457,8 @@
     "                                    \"@type\": \"Passive Optical Scanner\",\n",
     "                                    \"mass\": instru.mass, \n",
     "                                    \"volume\": instru.volume, \n",
-    "                                    \"power\": instru.power, \n",
-    "                                    \"fieldOfViewGeometry\": instrupy_fov_geom,\n",
+    "                                    \"power\": instru.power,\n",
+    "                                    \"fieldOfViewGeometry\": instrupy_fov_geom, \n",
     "                                    \"scenceFieldOfViewGeometry\": instrupy_scene_fov_geom,\n",
     "                                    \"scanTechnique\": \"WHISKBROOM\",\n",
     "                                    \"orientation\": {\n",
