revise the way FOR is initialized for the TAT-C instrument

--- a/src/tatc-instrupy-optical-sensor-example.ipynb
+++ b/src/tatc-instrupy-optical-sensor-example.ipynb
@@ -231,8 +231,11 @@
    "source": [
     "def access_tatc(request: AccessRequest) -> AccessResponse:\n",
     "    def get_field_of_regard(payload):\n",
-    "        if payload.scene_field_of_view is not None:\n",
-    "            field_of_regard = payload.scene_field_of_view\n",
+    "        if hasattr(payload, 'scene_field_of_view'):\n",
+    "            if payload.scene_field_of_view is not None:\n",
+    "                field_of_regard = payload.scene_field_of_view\n",
+    "            else:\n",
+    "                field_of_regard = payload.field_of_view\n",
     "        else:\n",
     "            field_of_regard = payload.field_of_view\n",
     "        if field_of_regard.type == \"CircularGeometry\":\n",
