--- a/src/tatc-instrupy-instrument-example.ipynb
+++ b/src/tatc-instrupy-instrument-example.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,6 +288,22 @@
    "outputs": [],
    "source": [
     "def access_tatc(request: AccessRequest) -> AccessResponse:\n",
+    "\n",
+    "    def get_field_of_regard(payload):\n",
+    "        if hasattr(payload, 'scene_field_of_view'):\n",
+    "            if payload.scene_field_of_view is not None:\n",
+    "                field_of_regard = payload.scene_field_of_view\n",
+    "            else:\n",
+    "                field_of_regard = payload.field_of_view\n",
+    "        else:\n",
+    "            field_of_regard = payload.field_of_view\n",
+    "        if field_of_regard.type == \"CircularGeometry\":\n",
+    "            return(field_of_regard.diameter)\n",
+    "        elif field_of_regard.type == \"RectangularGeometry\":\n",
+    "            return(field_of_regard.angle_height)\n",
+    "        else:\n",
+    "            raise RuntimeError('Unknown geometry type: {field_of_regard.type}')\n",
+    "        \n",
     "    if request.propagator != Propagator.SGP4:\n",
     "        raise RuntimeError(\"TAT-C only supports SGP4 propagator.\")\n",
     "    satellites = [\n",
@@ -296,8 +312,8 @@
     "            orbit=TwoLineElements(tle=satellite.orbit.to_tle()),\n",
     "            instruments=[\n",
     "                TATC_Instrument(\n",
-    "                    name=str(payload.id), field_of_regard=payload.field_of_view.diameter\n",
-    "                )  # assumed that the instrument has a circular FOV\n",
+    "                    name=str(payload.id), field_of_regard= get_field_of_regard(payload)\n",
+    "                ) \n",
     "            ],\n",
     "        )\n",
     "        for satellite in request.satellites\n",
@@ -371,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
