add sphinx auto documentation

--- a/docs/examples/orbitpy-propagation-example.ipynb
+++ b/docs/examples/orbitpy-propagation-example.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# OrbitPy propagation example (J2 and SGP4 propagators)\n",
+    "# OrbitPy Propagation Example\n",
+    "\n",
+    "J2 and SGP4 Propagators\n",
     "\n",
     "Specifies a function with well-defined input (`PropagationRequest`) and output (`PropagationResponse`) using OrbitPy's implementation."
    ]
@@ -59,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define mission parameters"
+    "## Define Mission Parameters"
    ]
   },
   {
@@ -85,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run propagation calculations with OrbitPy\n",
+    "## Run Propagation Calculations with OrbitPy\n",
     "\n",
     "J2 or SGP4 propagators can be chosen.\n"
    ]
