--- a/docs/examples/orbitpy-tatc-coverage-example.ipynb
+++ b/docs/examples/orbitpy-tatc-coverage-example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# OrbitPy TAT-C Example for discrete time coverage calculations\n",
+    "# OrbitPy/TAT-C Propagation \n",
     "\n",
     "OrbitPy is used for access calculations, followed by TAT-C to conduct coverage analysis. \n",
     "\n",
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define mission parameters"
+    "## Define Mission Parameters"
    ]
   },
   {
@@ -135,7 +135,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run access calculations with OrbitPy to get access-periods at Target ground points.\n",
+    "## Run Access Calculations with OrbitPy\n",
+    "\n",
+    "To get access-periods at Target ground points.\n",
     "\n",
     "Access calculations also involve propagation calculations.\n"
    ]
@@ -406,7 +408,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run coverage analysis with TAT-C on the Access response from OrbitPy"
+    "## Run Coverage Analysis with TAT-C \n",
+    "\n",
+    "On the Access response from OrbitPy"
    ]
   },
   {
