--- a/docs/examples/point-example.ipynb
+++ b/docs/examples/point-example.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Target Point\n",
+    "\n",
+    "This example demonstrates how to use the eose `TargetPoint` object."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
