--- a/docs/examples/tatc-coverage-example.ipynb
+++ b/docs/examples/tatc-coverage-example.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TAT-C Interface Implementation\n",
+    "# TAT-C Coverage Example\n",
+    "\n",
+    "## Interface\n",
     "\n",
     "Specifies a function with well-defined input (`CoverageRequest`) and output (`CoverageResponse`) using TAT-C's implementation."
    ]
@@ -183,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example\n",
+    "## Demonstration\n",
     "\n",
     "Pulls OMM file from Celestrak, issues observation request starting Jan 1 2024 for 7 days), and displays results."
    ]
