--- a/docs/examples/tatc-instrupy-optical-sensor-example.ipynb
+++ b/docs/examples/tatc-instrupy-optical-sensor-example.ipynb
@@ -1,88 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from eose.instruments import CircularGeometry, RectangularGeometry, BasicSensor\n",
-    "\n",
-    "from pydantic import ValidationError\n",
-    "\n",
-    "# Example usage of SphericalGeometry class used to define the field of view of the instrument\n",
-    "\n",
-    "circ_geom = CircularGeometry(diameter=90.0)\n",
-    "print(circ_geom)\n",
-    "\n",
-    "rect_geom = RectangularGeometry(angle_height=90.0, angle_width=45)\n",
-    "print(rect_geom)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Example simple usage of eose-api BasicSensor class\n",
-    "\n",
-    "sensor = BasicSensor(\n",
-    "    mass=100.5,\n",
-    "    volume=0.75,\n",
-    "    power=150.0,\n",
-    "    field_of_view=CircularGeometry(diameter=30.0),\n",
-    "    data_rate=10.5,\n",
-    "    bits_per_pixel=16,\n",
-    ")\n",
-    "\n",
-    "print(sensor)\n",
-    "\n",
-    "sensor = BasicSensor(\n",
-    "    mass=100.5,\n",
-    "    volume=0.75,\n",
-    "    power=150.0,\n",
-    "    orientation=list([0.5, 0.5, 0.5, 0.5]),\n",
-    "    field_of_view=RectangularGeometry(angle_width=30.0, angle_height=10.0),\n",
-    "    data_rate=50.5,\n",
-    "    bits_per_pixel=8,\n",
-    ")\n",
-    "\n",
-    "print(sensor)\n",
-    "\n",
-    "sensor = BasicSensor(\n",
-    "    mass=100.5,\n",
-    "    volume=0.75,\n",
-    "    power=150.0,\n",
-    "    orientation=list([0.5, 0.5, 0.5, 0.5]),\n",
-    "    data_rate=50.5,\n",
-    "    bits_per_pixel=8,\n",
-    ")\n",
-    "\n",
-    "print(sensor)\n",
-    "\n",
-    "display(sensor.model_dump_json())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%reset -f"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example usage with TAT-C and InstruPy"
+    "# Passive Optical Sensor Data Metrics Calculations\n",
+    "\n",
+    "TAT-C is used for orbit propagation (satellite states), OrbitPy is used for access interval calculations, while InstruPy is used for the data metrics calculations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,13 +62,13 @@
     ")\n",
     "from eose.grids import UniformAngularGrid\n",
     "\n",
+    "from instrupy.passive_optical_scanner_model import PassiveOpticalScannerModel as InstruPy_PassiveOpticalScannerModel\n",
     "\n",
-    "from instrupy.basic_sensor_model import BasicSensorModel as InstruPy_BasicSensorModel\n",
-    "\n",
-    "from eose.instruments import CircularGeometry, BasicSensor\n",
+    "from eose.instruments import RectangularGeometry, OpticalInstrumentScanTechnique, PassiveOpticalScanner\n",
     "from eose.datametrics import (\n",
     "    DataMetricsRequest,\n",
     "    BasicSensorDataMetricsInstantaneous,\n",
+    "    PassiveOpticalScannerDataMetricsInstantaneous,\n",
     "    DataMetricsSample,\n",
     "    DataMetricsRecord,\n",
     "    DataMetricsResponse,\n",
@@ -152,34 +81,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define mission parameters"
+    "## Define Mission Parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define the orbit and the instrument\n",
-    "iss_omm_str = '[{\"OBJECT_NAME\":\"ISS (ZARYA)\",\"OBJECT_ID\":\"1998-067A\",\"EPOCH\":\"2024-06-07T09:53:34.728000\",\"MEAN_MOTION\":15.50975122,\"ECCENTRICITY\":0.0005669,\"INCLINATION\":51.6419,\"RA_OF_ASC_NODE\":3.7199,\"ARG_OF_PERICENTER\":284.672,\"MEAN_ANOMALY\":139.0837,\"EPHEMERIS_TYPE\":0,\"CLASSIFICATION_TYPE\":\"U\",\"NORAD_CAT_ID\":25544,\"ELEMENT_SET_NO\":999,\"REV_AT_EPOCH\":45703,\"BSTAR\":0.00033759,\"MEAN_MOTION_DOT\":0.00019541,\"MEAN_MOTION_DDOT\":0}]'\n",
-    "iss_omm = json.loads(iss_omm_str)[0]\n",
+    "firesat_omm_str = '[{\"OBJECT_NAME\":\"ISS (ZARYA)\",\"OBJECT_ID\":\"1998-067A\",\"EPOCH\":\"2024-06-07T09:53:34.728000\",\"MEAN_MOTION\":15.50975122,\"ECCENTRICITY\":0.0005669,\"INCLINATION\":51.6419,\"RA_OF_ASC_NODE\":3.7199,\"ARG_OF_PERICENTER\":284.672,\"MEAN_ANOMALY\":139.0837,\"EPHEMERIS_TYPE\":0,\"CLASSIFICATION_TYPE\":\"U\",\"NORAD_CAT_ID\":25544,\"ELEMENT_SET_NO\":999,\"REV_AT_EPOCH\":45703,\"BSTAR\":0.00033759,\"MEAN_MOTION_DOT\":0.00019541,\"MEAN_MOTION_DDOT\":0}]'\n",
+    "firesat_omm = json.loads(firesat_omm_str)[0]\n",
     "\n",
-    "basic_sensor = BasicSensor(\n",
-    "    id=\"Atom\",\n",
-    "    mass=100.5,\n",
-    "    volume=0.75,\n",
-    "    power=150.0,\n",
-    "    field_of_view=CircularGeometry(diameter=60.0),\n",
-    "    data_rate=10.5,\n",
-    "    bits_per_pixel=16,\n",
+    "firesat = PassiveOpticalScanner(\n",
+    "    id=\"FireSat-Sensor\",\n",
+    "    mass= 28, \n",
+    "    volume= 0.12, \n",
+    "    power= 32, \n",
+    "    field_of_view= RectangularGeometry(angle_height= 0.628, angle_width= 115.8),\n",
+    "    scene_field_of_view= RectangularGeometry(angle_height= 30, angle_width= 115.8),\n",
+    "    scanTechnique= OpticalInstrumentScanTechnique.WHISKBROOM,\n",
+    "    data_rate= 85,\n",
+    "    number_detector_rows= 256,\n",
+    "    number_detector_cols= 1,\n",
+    "    detector_width= 30e-6,\n",
+    "    focal_length= 0.7,\n",
+    "    operating_wavelength= 4.2e-6,\n",
+    "    bandwidth= 1.9e-6,\n",
+    "    quantum_efficiency= 0.5,\n",
+    "    target_black_body_temp= 290,\n",
+    "    bits_per_pixel= 8,\n",
+    "    optics_sys_eff= 0.75,\n",
+    "    number_of_read_out_E= 25,\n",
+    "    aperture_dia= 0.26,\n",
+    "    F_num= 2.7\n",
     ")\n",
     "\n",
     "satellites = [\n",
     "    Satellite(\n",
-    "        id=\"ISS\",\n",
-    "        orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm),\n",
-    "        payloads=[basic_sensor],\n",
+    "        id=\"FireSat\",\n",
+    "        orbit=GeneralPerturbationsOrbitState.from_omm(firesat_omm),\n",
+    "        payloads=[firesat],\n",
     "    )\n",
     "]\n",
     "\n",
@@ -196,12 +139,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run propagation with TAT-C to get satellite states"
+    "## Run Propagation with TAT-C\n",
+    "\n",
+    "To get satellite states"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -260,7 +205,7 @@
     "    propagator=Propagator.SGP4,\n",
     ")\n",
     "\n",
-    "display(request.model_dump_json())\n",
+    "#display(request.model_dump_json())\n",
     "\n",
     "propagation_response = propagate_tatc(request)\n",
     "\n",
@@ -268,15 +213,16 @@
     "\n",
     "propagation_data = propagation_response.as_dataframe()\n",
     "\n",
-    "# display(propagation_data)"
+    "#display(propagation_data)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run access calculations with TAT-C to get access-periods at Target ground points. It is assumed that the sensor shall be of Circular FOV geometry. \n",
-    "Coverage analysis is not required."
+    "## Run Access Calculations with TAT-C\n",
+    "\n",
+    "To get access-periods at Target ground points."
    ]
   },
   {
@@ -288,7 +234,6 @@
    "outputs": [],
    "source": [
     "def access_tatc(request: AccessRequest) -> AccessResponse:\n",
-    "\n",
     "    def get_field_of_regard(payload):\n",
     "        if hasattr(payload, 'scene_field_of_view'):\n",
     "            if payload.scene_field_of_view is not None:\n",
@@ -303,7 +248,7 @@
     "            return(field_of_regard.angle_height)\n",
     "        else:\n",
     "            raise RuntimeError('Unknown geometry type: {field_of_regard.type}')\n",
-    "        \n",
+    "            \n",
     "    if request.propagator != Propagator.SGP4:\n",
     "        raise RuntimeError(\"TAT-C only supports SGP4 propagator.\")\n",
     "    satellites = [\n",
@@ -313,7 +258,7 @@
     "            instruments=[\n",
     "                TATC_Instrument(\n",
     "                    name=str(payload.id), field_of_regard= get_field_of_regard(payload)\n",
-    "                ) \n",
+    "                )\n",
     "            ],\n",
     "        )\n",
     "        for satellite in request.satellites\n",
@@ -364,10 +309,10 @@
     "    start=mission_start,\n",
     "    duration=mission_duration,\n",
     "    propagator=Propagator.SGP4,\n",
-    "    payload_ids=[\"Atom\"],\n",
+    "    payload_ids=[\"FireSat-Sensor\"],\n",
     ")\n",
     "\n",
-    "display(request.model_dump_json())\n",
+    "#display(request.model_dump_json())\n",
     "\n",
     "access_response = access_tatc(request)\n",
     "\n",
@@ -382,12 +327,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run Data Metrics calculation with InstruPy"
+    "## Run Data Metrics Calculation with InstruPy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -403,21 +348,22 @@
     "    :paramtype time_instant: AwareDatetime\n",
     "    :param data_metrics: A dictionary containing data metrics such as incidence angle, look angle, etc.\n",
     "    :paramtype data_metrics: dict\n",
-    "    :return: An instance of `BasicSensorDataMetricsInstantaneous` with the provided metrics.\n",
-    "    :rtype: BasicSensorDataMetricsInstantaneous\n",
+    "    :return: An instance of `PassiveOpticalScannerDataMetricsInstantaneous` with the provided metrics.\n",
+    "    :rtype: PassiveOpticalScannerDataMetricsInstantaneous\n",
     "    :raises ValueError: If the sensor type is not supported.\n",
     "    \"\"\"\n",
-    "    if instru_type == \"BasicSensor\":\n",
-    "        return BasicSensorDataMetricsInstantaneous(\n",
+    "    if instru_type == \"PassiveOpticalScanner\":\n",
+    "        return PassiveOpticalScannerDataMetricsInstantaneous(\n",
     "            time=time_instant,\n",
-    "            incidence_angle=data_metrics[\"incidence angle [deg]\"],\n",
-    "            look_angle=data_metrics[\"look angle [deg]\"],\n",
-    "            observation_range=data_metrics[\"observation range [km]\"],\n",
-    "            solar_zenith=data_metrics[\"solar zenith [deg]\"],\n",
+    "            noise_equivalent_delta_T=data_metrics[\"noise-equivalent delta T [K]\"],\n",
+    "            dynamic_range=data_metrics[\"dynamic range\"],\n",
+    "            signal_to_noise_ratio=data_metrics[\"SNR\"],\n",
+    "            along_track_resolution=data_metrics[\"ground pixel along-track resolution [m]\"],\n",
+    "            cross_track_resolution=data_metrics[\"ground pixel cross-track resolution [m]\"],\n",
     "        )\n",
     "    else:\n",
     "        raise ValueError(\n",
-    "            f\"{instru_type} instrument type is not supported. Only 'BasicSensor' instrument type is supported.\"\n",
+    "            f\"{instru_type} instrument type is not supported by this script. Only 'PassiveOpticalScanner' instrument type is supported.\"\n",
     "        )\n",
     "\n",
     "\n",
@@ -462,7 +408,7 @@
     "        :param instrument_id: The identifier of the instrument. The identifier of the instrument. The identifier needs to be unique within the list of instrument ids for a given satellite object.\n",
     "        :paramtype instrument_id: str\n",
     "        :return: The instrument type and corresponding sensor model.\n",
-    "        :rtype: tuple[str, InstruPy_BasicSensorModel]\n",
+    "        :rtype: tuple[str, InstruPy_PassiveOpticalScannerModel]\n",
     "        :raises ValueError: If the instrument type is unsupported.\n",
     "        :raises RuntimeError: If the instrument model is not found within the specified satellite.\n",
     "        \"\"\"\n",
@@ -471,7 +417,8 @@
     "                for instru in sat.payloads:\n",
     "                    if instru.id == instrument_id:\n",
     "                        instru_type = instru.type\n",
-    "                        if instru_type == \"BasicSensor\":\n",
+    "                        if instru_type == \"PassiveOpticalScanner\":\n",
+    "                            instrupy_fov_geom = None\n",
     "                            if instru.field_of_view.type == \"CircularGeometry\":\n",
     "                                instrupy_fov_geom = {\n",
     "                                    \"shape\": \"CIRCULAR\",\n",
@@ -487,6 +434,24 @@
     "                                raise ValueError(\n",
     "                                    f\"Only Circular and Rectangular geometries are supported and not {instru.field_of_view.type}\"\n",
     "                                )\n",
+    "                            \n",
+    "                            instrupy_scene_fov_geom = None\n",
+    "                            if instru.scene_field_of_view: \n",
+    "                                if instru.scene_field_of_view.type == \"CircularGeometry\":\n",
+    "                                    instrupy_scene_fov_geom = {\n",
+    "                                        \"shape\": \"CIRCULAR\",\n",
+    "                                        \"diameter\": instru.scene_field_of_view.diameter,\n",
+    "                                    }\n",
+    "                                elif instru.scene_field_of_view.type == \"RectangularGeometry\":\n",
+    "                                    instrupy_scene_fov_geom = {\n",
+    "                                        \"shape\": \"RECTANGULAR\",\n",
+    "                                        \"angleHeight\": instru.scene_field_of_view.angle_height,\n",
+    "                                        \"angleWidth\": instru.scene_field_of_view.angle_width,\n",
+    "                                    }\n",
+    "                                else:\n",
+    "                                    raise ValueError(\n",
+    "                                        f\"Only Circular and Rectangular geometries are supported and not {instru.instrupy_scene_fov_geom.type}\"\n",
+    "                                    )\n",
     "\n",
     "                            # Convert orientation in Quaternion to Euler rotations\n",
     "                            r = Scipy_Rotation.from_quat(list(instru.orientation))\n",
@@ -494,14 +459,15 @@
     "                                \"XYZ\", degrees=True\n",
     "                            )  # Conventions 'XYZ' are for intrinsic rotations (used by OrbitPy), while 'xyz' are for extrinsic rotations.\n",
     "\n",
-    "                            instrupy_sensor = InstruPy_BasicSensorModel.from_dict(\n",
+    "                            instrupy_sensor = InstruPy_PassiveOpticalScannerModel.from_dict(\n",
     "                                {\n",
-    "                                    \"@type\": \"Basic Sensor\",\n",
-    "                                    \"orientation\": {\n",
-    "                                        \"referenceFrame\": \"SC_BODY_FIXED\",\n",
-    "                                        \"convention\": \"REF_FRAME_ALIGNED\",\n",
-    "                                    },\n",
-    "                                    \"fieldOfViewGeometry\": instrupy_fov_geom,\n",
+    "                                    \"@type\": \"Passive Optical Scanner\",\n",
+    "                                    \"mass\": instru.mass, \n",
+    "                                    \"volume\": instru.volume, \n",
+    "                                    \"power\": instru.power,\n",
+    "                                    \"fieldOfViewGeometry\": instrupy_fov_geom, \n",
+    "                                    \"scenceFieldOfViewGeometry\": instrupy_scene_fov_geom,\n",
+    "                                    \"scanTechnique\": \"WHISKBROOM\",\n",
     "                                    \"orientation\": {\n",
     "                                        \"referenceFrame\": \"NADIR_POINTING\",\n",
     "                                        \"convention\": \"XYZ\",\n",
@@ -509,13 +475,30 @@
     "                                        \"yRotation\": y,\n",
     "                                        \"zRotation\": z,\n",
     "                                    },\n",
+    "                                    \"maneuver\": None,\n",
+    "                                    \"dataRate\": instru.data_rate,\n",
+    "                                    \"numberDetectorRows\": instru.number_detector_rows,\n",
+    "                                    \"numberDetectorCols\": instru.number_detector_cols,\n",
+    "                                    \"detectorWidth\": instru.detector_width,\n",
+    "                                    \"focalLength\": instru.focal_length,\n",
+    "                                    \"operatingWavelength\": instru.operating_wavelength,\n",
+    "                                    \"bandwidth\": instru.bandwidth,\n",
+    "                                    \"quantumEff\": instru.quantum_efficiency,\n",
+    "                                    \"targetBlackBodyTemp\": instru.target_black_body_temp,\n",
+    "                                    \"bitsPerPixel\": instru.bits_per_pixel,\n",
+    "                                    \"opticsSysEff\": instru.optics_sys_eff,\n",
+    "                                    \"numOfReadOutE\": instru.number_of_read_out_E,\n",
+    "                                    \"apertureDia\": instru.aperture_dia,\n",
+    "                                    \"Fnum\": instru.F_num,\n",
+    "                                    \"maxDetectorExposureTime\": instru.max_detector_exposure_time,\n",
+    "                                    \"atmosLossModel\": None,\n",
     "                                    \"@id\": instru.id,\n",
     "                                }\n",
     "                            )\n",
-    "                            return instru_type, instrupy_sensor\n",
+    "                            return instru_type, instrupy_sensor                        \n",
     "                        else:\n",
     "                            raise ValueError(\n",
-    "                                f\"{instru_type} instrument type is not supported by this script. Only 'BasicSensor' instrument type is supported.\"\n",
+    "                                f\"{instru_type} instrument type is not supported by this script. Only 'PassiveOpticalScanner' instrument type is supported.\"\n",
     "                            )\n",
     "        raise RuntimeError(\n",
     "            \"Instrument model for the requested instrument-id (within the specified satellite_id) was not found.\"\n",
