--- a/docs/examples/tatc-propagation-example.ipynb
+++ b/docs/examples/tatc-propagation-example.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TAT-C Interface Implementation\n",
+    "# TAT-C Propagation Example\n",
+    "\n",
+    "## Interface\n",
     "\n",
     "Specifies a function with well-defined input (`PropagationRequest`) and output (`PropagationResponse`) using TAT-C's implementation."
    ]
@@ -86,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example\n",
+    "## Demonstration\n",
     "\n",
     "Pulls OMM file from Celestrak, issues propagation request starting Jan 1 2024 for 1 hour (1 minute time step), and displays results."
    ]
@@ -589,7 +591,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tatc_env_2",
+   "display_name": "tatc",
    "language": "python",
    "name": "python3"
   },
@@ -603,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
